--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <title></title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
+
 <body>
 
 <h1>Hello world, I am 2729084</h1>
 
+<a href="2729084-lab2.html"></a>
 </body>
 </html>
