--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <h1>Hello world, I am 2729084</h1>
 
-<a href="2729084-lab2.html"></a>
+<a href="2729084-lab2.html">Yohanes' portfolio</a>
 </body>
 </html>
